--- a/mlbb.html
+++ b/mlbb.html
@@ -92,7 +92,7 @@
       <span class="checkmark">✔</span>
     </div>
     <div class="diamond-item" onclick="selectItem(this, '1.000 Diamond - Rp225.000')">
-      <img src="image/diamond.png" alt="Diamond" />
+      <img src="assets/image/diamond.png" alt="Diamond" />
       <div>
         <strong>1.000 Diamond</strong>
         <p>Rp225.000</p>
