--- a/mlbb.html
+++ b/mlbb.html
@@ -11,13 +11,21 @@
       color: #003366;
       font-family: Arial, sans-serif;
     }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 100px; /* ruang di atas untuk header/section lain */
+    }
+
     .diamond-list {
       display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       width: 40%;
-      margin: 20px auto;
       gap: 16px;
     }
+
     .diamond-item {
       display: flex;
       align-items: center;
@@ -31,95 +39,109 @@
       cursor: pointer;
       font-size: 12px;
     }
+
     .diamond-item.selected {
       background-color: #cce5ff !important;
       border: 2px solid #007bff;
     }
+
     .diamond-item:hover {
       transform: translateY(-4px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.3);
     }
+
     .diamond-item img {
       width: 28px;
       height: 28px;
     }
+
     .diamond-item strong {
       font-size: 12px;
     }
+
     .diamond-item p {
       font-size: 11px;
       margin: 0;
     }
+
     .diamond-item .checkmark {
       margin-left: auto;
       color: green;
       font-size: 14px;
       display: none;
     }
+
     .diamond-item.selected .checkmark {
       display: block;
     }
+
     #price-detail {
       display: none;
-      margin: 30px auto;
-      width: 50%;
-      text-align: center;
+      margin-top: 20px;
+      width: 40%;
       padding: 5px 10px;
       background-color: #f8f9fa;
       border: 1px solid #ccc;
       border-radius: 10px;
       color: #000;
       font-size: 13px;
+      text-align: left;
+    }
+
+    #price-detail h3, #price-detail p {
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <div class="diamond-list">
-    <div class="diamond-item" onclick="selectItem(this, '172 Diamond - Rp30.000')">
-      <img src="image/diamond.png" alt="Diamond" />
-      <div>
-        <strong>172 Diamond</strong>
-        <p>Rp30.000</p>
+  <div class="container">
+    <div class="diamond-list">
+      <div class="diamond-item" onclick="selectItem(this, '172 Diamond - Rp30.000')">
+        <img src="assets/image/diamond.png" alt="Diamond" />
+        <div>
+          <strong>172 Diamond</strong>
+          <p>Rp30.000</p>
+        </div>
+        <span class="checkmark">✔</span>
       </div>
-      <span class="checkmark">✔</span>
-    </div>
-    <div class="diamond-item" onclick="selectItem(this, '344 Diamond - Rp60.000')">
-      <img src="image/diamond.png" alt="Diamond" />
-      <div>
-        <strong>344 Diamond</strong>
-        <p>Rp60.000</p>
+      <div class="diamond-item" onclick="selectItem(this, '344 Diamond - Rp60.000')">
+        <img src="assets/image/diamond.png" alt="Diamond" />
+        <div>
+          <strong>344 Diamond</strong>
+          <p>Rp60.000</p>
+        </div>
+        <span class="checkmark">✔</span>
       </div>
-      <span class="checkmark">✔</span>
-    </div>
-    <div class="diamond-item" onclick="selectItem(this, '1.000 Diamond - Rp225.000')">
-      <img src="assets/image/diamond.png" alt="Diamond" />
-      <div>
-        <strong>1.000 Diamond</strong>
-        <p>Rp225.000</p>
+      <div class="diamond-item" onclick="selectItem(this, '1.000 Diamond - Rp225.000')">
+        <img src="assets/image/diamond.png" alt="Diamond" />
+        <div>
+          <strong>1.000 Diamond</strong>
+          <p>Rp225.000</p>
+        </div>
+        <span class="checkmark">✔</span>
       </div>
-      <span class="checkmark">✔</span>
-    </div>
-    <div class="diamond-item" onclick="selectItem(this, '2.000 Diamond - Rp300.000')">
-      <img src="image/diamond.png" alt="Diamond" />
-      <div>
-        <strong>2.000 Diamond</strong>
-        <p>Rp300.000</p>
+      <div class="diamond-item" onclick="selectItem(this, '2.000 Diamond - Rp300.000')">
+        <img src="assets/image/diamond.png" alt="Diamond" />
+        <div>
+          <strong>2.000 Diamond</strong>
+          <p>Rp300.000</p>
+        </div>
+        <span class="checkmark">✔</span>
       </div>
-      <span class="checkmark">✔</span>
-    </div>
-    <div class="diamond-item" onclick="selectItem(this, '4.000 Diamond - Rp400.000')">
-      <img src="image/diamond.png" alt="Diamond" />
-      <div>
-        <strong>4.000 Diamond</strong>
-        <p>Rp400.000</p>
+      <div class="diamond-item" onclick="selectItem(this, '4.000 Diamond - Rp400.000')">
+        <img src="assets/image/diamond.png" alt="Diamond" />
+        <div>
+          <strong>4.000 Diamond</strong>
+          <p>Rp400.000</p>
+        </div>
+        <span class="checkmark">✔</span>
       </div>
-      <span class="checkmark">✔</span>
     </div>
-  </div>
 
-  <div id="price-detail">
-    <h3 style="margin: 5px 0;">Detail Harga</h3>
-    <p id="detail-text" style="margin: 0;"></p>
+    <div id="price-detail">
+      <h3>Detail Harga</h3>
+      <p id="detail-text"></p>
+    </div>
   </div>
 
   <script>
