--- a/mlbb.html
+++ b/mlbb.html
@@ -6,12 +6,18 @@
   <title>Top Up Mobile Legends</title>
   <link rel="stylesheet" href="assets/style.css" />
   <style>
+    body {
+      background: linear-gradient(to right, #1e3c72, #2a0845); /* biru ke ungu */
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
     .main-wrapper {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      margin-top: 200px;
       gap: 30px;
+      margin-top: 200px;
     }
 
     .left-box {
@@ -20,16 +26,86 @@
       background-color: white;
       border-radius: 10px;
     }
+
+    .diamond-list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      width: 100%;
+      max-width: 600px;
+      gap: 16px;
+      margin: 0 auto;
+    }
+
+    .diamond-item {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      background: silver;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      font-size: 12px;
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .diamond-item:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+    }
+
+    .diamond-item.selected {
+      background-color: #cce5ff !important;
+      border: 2px solid #007bff;
+    }
+
+    .diamond-item img {
+      width: 32px;
+      height: 32px;
+    }
+
+    .diamond-item strong {
+      font-size: 13px;
+    }
+
+    .diamond-item p {
+      font-size: 12px;
+      margin: 0;
+    }
+
+    .checkmark {
+      margin-left: auto;
+      color: green;
+      font-size: 16px;
+      display: none;
+    }
+
+    .diamond-item.selected .checkmark {
+      display: block;
+    }
+
+    #price-detail {
+      display: none;
+      margin-top: 20px;
+      width: 100%;
+      max-width: 600px;
+      padding: 5px 10px;
+      background-color: #f8f9fa;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      color: #000;
+      font-size: 13px;
+      text-align: left;
+    }
   </style>
 </head>
 <body>
   <div class="main-wrapper">
-    <div class="left-box">
-      <!-- Isi nanti di sini -->
-    </div>
+    <div class="left-box"></div>
 
     <div>
-      <div class="diamond-list" style="margin-left: 10%;">
+      <div class="diamond-list">
         <div class="diamond-item" onclick="selectItem(this, '172 Diamond - Rp30.000')">
           <img src="assets/image/diamond.png" alt="Diamond" />
           <div>
@@ -72,9 +148,9 @@
         </div>
       </div>
 
-      <div id="price-detail" style="display: none; margin: 20px auto; width: 40%; padding: 5px 10px; background: #f8f9fa; border: 1px solid #ccc; border-radius: 10px; color: #000; font-size: 13px; text-align: left;">
-        <h3 style="margin: 5px 0;">Detail Harga</h3>
-        <p id="detail-text" style="margin: 0;"></p>
+      <div id="price-detail">
+        <h3>Detail Harga</h3>
+        <p id="detail-text"></p>
       </div>
     </div>
   </div>
