--- a/mlbb.html
+++ b/mlbb.html
@@ -70,8 +70,7 @@
 
     #price-detail {
       display: none;
-      width: 100%;
-      max-width: 600px;
+      width: 30%;
       padding: 6px 10px;
       background-color: #f8f9fa;
       border: 1px solid #ccc;
@@ -80,12 +79,16 @@
       font-size: 12px;
       text-align: left;
     }
+
+    #detail-list li {
+      margin-bottom: 4px;
+    }
   </style>
 </head>
 <body>
   <div class="main-wrapper">
     <div class="left-box">
-      <!-- dikosongkan, silakan isi custom -->
+      <!-- Kosong, bisa kamu isi custom -->
     </div>
 
     <div>
@@ -134,51 +137,27 @@
 
       <div id="price-detail">
         <h3>Detail Harga</h3>
-        <p id="detail-text"></p>
+        <ul id="detail-list"></ul>
         <hr />
         <p><strong>Total:</strong> <span id="total-harga">Rp0</span></p>
       </div>
+
+      <!-- Form tetap dipisahkan agar bisa digunakan kalau dibutuhkan -->
+      <form id="topupForm" style="margin-top:20px;">
+        <input type="hidden" name="game" value="Mobile Legends" />
+        <input type="text" id="id" placeholder="Masukkan ID Game" required />
+        <input type="text" id="name" placeholder="Nama Lengkap" required />
+        <select id="payment" required>
+          <option value="">Pilih Pembayaran</option>
+          <option value="Dana">Dana</option>
+          <option value="Gopay">Gopay</option>
+          <option value="OVO">OVO</option>
+        </select>
+        <button type="submit">Kirim ke WhatsApp</button>
+      </form>
     </div>
   </div>
 
-  <script>
-    let selectedItems = [];
-
-    function selectItem(element, detail) {
-      const isSelected = element.classList.contains('selected');
-      if (isSelected) {
-        element.classList.remove('selected');
-        selectedItems = selectedItems.filter(item => item !== detail);
-      } else {
-        element.classList.add('selected');
-        selectedItems.push(detail);
-      }
-      updateDetail();
-    }
-
-    function updateDetail() {
-      const detailBox = document.getElementById("price-detail");
-      const detailText = document.getElementById("detail-text");
-      const totalHargaSpan = document.getElementById("total-harga");
-
-      if (selectedItems.length > 0) {
-        detailBox.style.display = "block";
-        detailText.textContent = selectedItems.join(', ');
-
-        let total = 0;
-        selectedItems.forEach(item => {
-          const match = item.match(/Rp([\d.]+)/);
-          if (match) {
-            total += parseInt(match[1].replace(/\./g, ''));
-          }
-        });
-        totalHargaSpan.textContent = "Rp" + total.toLocaleString('id-ID');
-      } else {
-        detailBox.style.display = "none";
-        detailText.textContent = "";
-        totalHargaSpan.textContent = "Rp0";
-      }
-    }
-  </script>
+  <script src="mlbb.js"></script>
 </body>
 </html>
