--- a/mlbb.html
+++ b/mlbb.html
@@ -6,9 +6,19 @@
   <title>Top Up Mobile Legends</title>
   <link rel="stylesheet" href="assets/style.css" />
   <style>
-    body {
-      background: linear-gradient(to right, #1e3c72, #2a0845);
-    }
+  @font-face {
+    font-family: 'Cornerstone';
+    src: url('assets/fonts/garamond.ttf') format('truetype');
+  }
+
+  body {
+    background: linear-gradient(to right, #1e3c72, #2a0845);
+    font-family: 'garamond', sans-serif;
+  }
+
+  /* Lanjutkan CSS lainnya... */
+</style>
+
 
     .diamond-list {
       display: grid;
