--- a/mlbb.html
+++ b/mlbb.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assets/style.css" />
   <style>
   @font-face {
-    font-family: 'Cornerstone';
+    font-family: 'garamond';
     src: url('assets/fonts/garamond.ttf') format('truetype');
   }
 
